2008-01-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #240073

	* gui/e-cal-model-tasks.h: (enum ECalModelTasksField):
	Move strikeout field to known fields, otherwise the "Click to add" row
	will have text strikeouted.

2008-01-28  Chenthill Palanisamy  <pchenthill@novell.com>

	* gui/print.c: (print_week_summary): Free the component
	data.

2008-01-28  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #355864

	* gui/e-week-view.c: (e_week_view_remove_event_cb):
	Update span->background_item->event_num properly because of remove
	of the item with lower event_num.

2008-01-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #240073

	* gui/e-cal-model-tasks.h:
	* gui/e-cal-model-tasks.c: (is_status_canceled), (ecmt_value_at):
	Define new virtual readonly column to calculate strikeout state.
	* gui/e-calendar-table.c: (e_calendar_table_init):
	Use new virtual column as strikeout column.

2008-01-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #475781

	* gui/dialogs/recurrence-page.c: (fill_ending_date),
	(recurrence_page_fill_widgets):
	* gui/dialogs/memo-page.c: (memo_page_fill_widgets):
	* gui/e-day-view.c: 2*(e_day_view_finish_long_event_resize),
	2*(e_day_view_on_editing_stopped):
	* gui/itip-utils.c: (comp_compliant), (reply_to_calendar_comp):
	* gui/e-week-view.c: (e_week_view_on_editing_stopped):
	* gui/e-calendar-view.c: (e_calendar_view_add_event),
	(e_calendar_view_get_tooltips):
	* gui/e-cal-component-preview.c: (write_html):
	* gui/e-cal-component-memo-preview.c: (write_html):
	* gui/e-cal-model.c: (add_instance_cb):
	Fix memory leaks around ECalComponentDateTime.

2008-01-25  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #510409

	* gui/e-memos.c: (obtain_list_of_components):
	* gui/e-tasks.c: (obtain_list_of_components):
	* gui/e-calendar-table.c: (e_calendar_table_copy_clipboard):
	* gui/e-memo-table.c: (e_memo_table_copy_clipboard):
	Do not free memmory owned by libical.
	* gui/e-week-view.c: (e_week_view_reshape_events):